<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.example.news_app.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <TextView
            android:id="@+id/heading_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/load_news"
            android:textAlignment="center"
            android:textSize="18dp"
            android:layout_marginBottom="8dp"/>
        <TextView
            android:id="@+id/contents_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/empty_string"
            android:layout_marginBottom="8dp" />
        <TextView
            android:id="@+id/date_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/empty_string"
            android:textAlignment="viewEnd"
            android:textSize="12dp"
            android:layout_marginBottom="8dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="bottom">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/category_choice_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/it"
                android:textSize="13dp" />
            <Button
                android:id="@+id/update_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/update_button"
                android:textSize="13dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/background_update_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/background_update_button"
                android:textSize="13dp" />
            <Button
                android:id="@+id/do_not_background_update_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/do_not_background_update_button"
                android:textSize="13dp" />
        </LinearLayout>

    </LinearLayout>
</LinearLayout>
